# ChangeLog for dev-python/setuptools
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.20 2007/03/30 22:12:35 jer Exp $

  30 Mar 2007; Jeroen Roovers <jer@gentoo.org> setuptools-0.6_rc5.ebuild:
  Marked ~hppa (bug #172817).

  13 Feb 2007; Markus Rothe <corsair@gentoo.org> setuptools-0.6_rc5.ebuild:
  Added ~ppc64; bug #166675

  06 Feb 2007; Simon Stelling <blubb@gentoo.org> setuptools-0.6_rc3.ebuild:
  stable on amd64; bug 163759

  03 Feb 2007; nixnut <nixnut@gentoo.org> setuptools-0.6_rc3.ebuild:
  Stable on ppc wrt bug 163759

  25 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  setuptools-0.6_rc3.ebuild:
  stable x86; bug #163759

*setuptools-0.6_rc5 (21 Jan 2007)

  21 Jan 2007; Lukasz Strzygowski <lucass@gentoo.org>
  +setuptools-0.6_rc5.ebuild:
  Version bump, bug #162835.

  10 Oct 2006; Marien Zwart <marienz@gentoo.org>
  -setuptools-0.6_alpha10.ebuild, -setuptools-0.6_alpha11.ebuild,
  -setuptools-0.6_beta2.ebuild:
  Remove old versions.

*setuptools-0.6_rc3 (21 Sep 2006)

  21 Sep 2006; Marien Zwart <marienz@gentoo.org> +setuptools-0.6_rc3.ebuild:
  Version bump, use a tarball instead of a zipfile, remove chmods that are no
  longer necessary.

  10 Sep 2006; Javier Villavicencio <the_paya@gentoo.org>
  setuptools-0.6_rc1.ebuild:
  Add ~x86-fbsd keyword.

*setuptools-0.6_rc1 (01 Aug 2006)

  01 Aug 2006; Lukasz Strzygowski <lucass@gentoo.org>
  +setuptools-0.6_rc1.ebuild:
  Version bump, bug #142373.

*setuptools-0.6_alpha11 (03 Apr 2006)

  03 Apr 2006; Marien Zwart <marienz@gentoo.org>
  -setuptools-0.6_alpha9.ebuild, +setuptools-0.6_alpha11.ebuild:
  Version bump with some ebuild cleanup and an added src_test, remove old ebuild.

  19 Mar 2006; Mark Loeser <halcy0n@gentoo.org>
  setuptools-0.6_alpha9.ebuild, setuptools-0.6_alpha10.ebuild:
  Add DEPEND on app-arch/unzip
