@@ -1,10 +1,9 @@
-DIST setuptools-0.6c1.zip 255048 RMD160 477eb1e8e32c3aeb6a46169264e30ae23432a7cc SHA1 9a206df82a92c646cfdb1fda6b91a83d09499904 SHA256 bcd7f2dce18208faf56cb872a8cb7a07db19ebea8a6a2c71ff71c72a642ec421
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST setuptools-0.6c3.tar.gz 238544 RMD160 e8095be76ca0b0dc1c0c90b0ea9eb07a88926764 SHA1 7d2bd14bbcd6c848cd195409f7f3e8bead7157b0 SHA256 b6b9bfefb41c6c2a44962a9ae1163f090d7c6ea536ed7c652ef4634d987dde5c
 DIST setuptools-0.6c5.tar.gz 245470 RMD160 07a8d1998750edacf3e0dd0a6f2eb4575b93286b SHA1 cb9623d0eedca8fbbd5aa0732d5385067b4f1a5d SHA256 ae1ee9b1a4a26d93e7920b19e3f322318faa3f6b98e38f3d40d04a5c131abe2f
-EBUILD setuptools-0.6_rc1.ebuild 1056 RMD160 a8cf1ea239cc37b68d1988dfe0eb77cee6a5ea2e SHA1 a852cf032a370053bf56cb20fd804058b745eaff SHA256 4950ae960d7eac7bfc52401e529ba3805769413b5818bacbdf2b4c53c60a3301
-MD5 2f82c49167f70395939542d5e58b31b5 setuptools-0.6_rc1.ebuild 1056
-RMD160 a8cf1ea239cc37b68d1988dfe0eb77cee6a5ea2e setuptools-0.6_rc1.ebuild 1056
-SHA256 4950ae960d7eac7bfc52401e529ba3805769413b5818bacbdf2b4c53c60a3301 setuptools-0.6_rc1.ebuild 1056
+DIST setuptools-0.6c6.tar.gz 248601 RMD160 04aea1ab47c0472de29f412e6c1bcd2ea6a7ffa6 SHA1 b6e05360db28b752949d98a7f508f0db51e0fdc1 SHA256 075172b39f0933d3fbd1d4e90f29742c1402a29da26db04357eb18fd46ffd6b1
 EBUILD setuptools-0.6_rc3.ebuild 807 RMD160 0c870a20564ab182da1cf52f5855aea4a2f8957c SHA1 cea2d1f8c2376a668c3ddb36210bef81e6bc70dd SHA256 4682438aec826395037a3896853131dcb33007d8552b9e3e767de45341d90e9b
 MD5 7898306bb4db0b276783f65bfcd322be setuptools-0.6_rc3.ebuild 807
 RMD160 0c870a20564ab182da1cf52f5855aea4a2f8957c setuptools-0.6_rc3.ebuild 807
@@ -13,20 +12,31 @@ EBUILD setuptools-0.6_rc5.ebuild 821 RMD160 b1689cbc9f3692902c2692f19c87389c25d4
 MD5 e456aae9f98fe621bba4b39573b8c203 setuptools-0.6_rc5.ebuild 821
 RMD160 b1689cbc9f3692902c2692f19c87389c25d4b1b0 setuptools-0.6_rc5.ebuild 821
 SHA256 853077576d684b9f250e24c66c773af62966dc503533185107793e3247919f15 setuptools-0.6_rc5.ebuild 821
-MISC ChangeLog 3129 RMD160 7029852870c456471c2cc784aeeabb1b3bbaced0 SHA1 0988e2a55142a259757a2c8c37c52407cd4a0390 SHA256 cf024d38479ec1ca7fed09a3ec77e5ba7c776c61058dc190a269d25c1cd2941a
-MD5 b7f9efbf3eff0db235bffce111d37302 ChangeLog 3129
-RMD160 7029852870c456471c2cc784aeeabb1b3bbaced0 ChangeLog 3129
-SHA256 cf024d38479ec1ca7fed09a3ec77e5ba7c776c61058dc190a269d25c1cd2941a ChangeLog 3129
+EBUILD setuptools-0.6_rc6.ebuild 828 RMD160 28e87ff6dac69b7a61f7aef7c06161106c54e78e SHA1 20695a1ed12108808cba613d5aee40e8fef5b2d4 SHA256 6f937b213315de8d9b1bc1fe5a329f00decea35c70d655da07ec145f253d0cdd
+MD5 7810080ffcc42933545c9c6c48d3a577 setuptools-0.6_rc6.ebuild 828
+RMD160 28e87ff6dac69b7a61f7aef7c06161106c54e78e setuptools-0.6_rc6.ebuild 828
+SHA256 6f937b213315de8d9b1bc1fe5a329f00decea35c70d655da07ec145f253d0cdd setuptools-0.6_rc6.ebuild 828
+MISC ChangeLog 3323 RMD160 729d710cd996135245977a633c67d07881940b8c SHA1 5c1c5001557c4af6bd27ae70501e93c216b54037 SHA256 396b509a11627ea0065f21fdb9bfd8d9a94e39e2428545c840907f17e50738be
+MD5 706d4350a1203e4a15dfc6dd83dd14f7 ChangeLog 3323
+RMD160 729d710cd996135245977a633c67d07881940b8c ChangeLog 3323
+SHA256 396b509a11627ea0065f21fdb9bfd8d9a94e39e2428545c840907f17e50738be ChangeLog 3323
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
 MD5 9ac4199ebe7cd3e7e311274994767f82 metadata.xml 160
 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb metadata.xml 160
 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a metadata.xml 160
-MD5 c472c87bd80ab95094665454233740cb files/digest-setuptools-0.6_rc1 241
-RMD160 f88ee2b62d5efef314b90f4fdccb867f95c22809 files/digest-setuptools-0.6_rc1 241
-SHA256 9a9c08c897bf72e9c32d86445c3d462956341cf18bbebff2bf49e63f43cda1a7 files/digest-setuptools-0.6_rc1 241
 MD5 fccc0d251b1ae615cca12f4c651ee042 files/digest-setuptools-0.6_rc3 250
 RMD160 f5ce1ab6d3ad34cd9dfafc5b004f4b54fffbda0a files/digest-setuptools-0.6_rc3 250
 SHA256 b1ae83fae9b250465d4e9008b54bf4c20ca6d2527e0a665c551552a13b08f372 files/digest-setuptools-0.6_rc3 250
 MD5 f58124d101f197a45d7d7df7bc990c36 files/digest-setuptools-0.6_rc5 250
 RMD160 919a4660b8d25d282760ea37d760af00fd09054f files/digest-setuptools-0.6_rc5 250
 SHA256 cf6633e6a5f2b3fb0c58e16ef62c2e86c9caedc680127b567dd98512d846af25 files/digest-setuptools-0.6_rc5 250
+MD5 40561936aee8835f1313d02e04388488 files/digest-setuptools-0.6_rc6 250
+RMD160 8d9938596dac55fb0feeab69ab8e1e1d386f33e5 files/digest-setuptools-0.6_rc6 250
+SHA256 30f64cfe7c2a5084a95586cbbada3b4fb0f0a7c232b040d16cfc98513a87c56f files/digest-setuptools-0.6_rc6 250
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.4 (GNU/Linux)
+
+iD8DBQFGXyTE96cFzIajWwkRAmEFAKCjk3ae+SusCYl3eF6mbu4G/DmTtACePmSV
+e5XdZcRYxbfkdh3IngcwtF4=
+=abQu
+-----END PGP SIGNATURE-----
