@@ -1,3 +1,0 @@
-MD5 9e5e38dcce7902b892110625d18108c6 setuptools-0.6c1.zip 255048
-RMD160 477eb1e8e32c3aeb6a46169264e30ae23432a7cc setuptools-0.6c1.zip 255048
-SHA256 bcd7f2dce18208faf56cb872a8cb7a07db19ebea8a6a2c71ff71c72a642ec421 setuptools-0.6c1.zip 255048
