@@ -1,0 +1,3 @@
+MD5 e3d56d4d19776042607cbbecae823c8b setuptools-0.6c6.tar.gz 248601
+RMD160 04aea1ab47c0472de29f412e6c1bcd2ea6a7ffa6 setuptools-0.6c6.tar.gz 248601
+SHA256 075172b39f0933d3fbd1d4e90f29742c1402a29da26db04357eb18fd46ffd6b1 setuptools-0.6c6.tar.gz 248601
