@@ -1,0 +1,28 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/setuptools/Attic/setuptools-0.6_rc6.ebuild,v 1.1 2007/05/31 19:40:39 pythonhead Exp $
+
+inherit distutils
+
+MY_P=${P/_rc/c}
+S="${WORKDIR}/${MY_P}"
+
+DESCRIPTION="A collection of enhancements to the Python distutils including easy install"
+HOMEPAGE="http://peak.telecommunity.com/DevCenter/setuptools"
+SRC_URI="http://cheeseshop.python.org/packages/source/s/setuptools/${MY_P}.tar.gz"
+
+LICENSE="PSF-2.2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE=""
+
+RDEPEND=">=dev-lang/python-2.4.2"
+DEPEND="${RDEPEND}"
+
+
+DOCS="EasyInstall.txt api_tests.txt pkg_resources.txt setuptools.txt"
+
+
+src_test() {
+	"${python}" setup.py test || die "tests failed"
+}
