@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/setuptools
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.20 2007/03/30 22:12:35 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.21 2007/05/31 19:40:39 pythonhead Exp $
+
+*setuptools-0.6_rc6 (31 May 2007)
+
+  31 May 2007; Rob Cakebread <pythonhead@gentoo.org>
+  -setuptools-0.6_rc1.ebuild, +setuptools-0.6_rc6.ebuild:
+  Version bump, dropped oldest version.
 
   30 Mar 2007; Jeroen Roovers <jer@gentoo.org> setuptools-0.6_rc5.ebuild:
   Marked ~hppa (bug #172817).
